doom: org-mode, magit

--- a/doom/config.org
+++ b/doom/config.org
@@ -81,6 +81,8 @@ By default changes made via a customisation interface are added to init.el. I pr
 
 #+BEGIN_SRC elisp
 
+(print "[config.org] Auto-customizations")
+
 (setq-default custom-file (expand-file-name "custom.el" doom-private-dir))
 (when (file-exists-p custom-file)
   (load custom-file))
@@ -251,14 +253,49 @@ I find it rather handy to be asked which buffer I want to see after splitting th
 
 #+end_src
 
+* Git (MaGit)
+
+#+begin_src elisp
+
+(print "[config.org] Git")
+
+(map! :localleader
+      :mode git-commit-mode
+      :n :desc "Commit" "," #'with-editor-finish
+      :n :desc "Quit commit" "q" #'with-editor-cancel)
+
+(map! :leader
+      (:prefix-map ("g" . "git")
+       :desc "Magit status" "s" #'magit-status
+       :desc "Magit status here" "S"   #'magit-status-here
+       :desc "Git stage hunk" "g"   #'git-gutter:stage-hunk
+       :desc "Git stage file" "G"   #'magit-stage-file
+      ))
+#+end_src
+
 * Org
 
 #+BEGIN_SRC elisp
 
-(print "[config.org] Org")
-
 (setq org-directory "~/org/")
 
+(after! org
+  ;; (print "[config.org] (after! org)")
+  (map! :map org-mode-map
+      :localleader
+      "e" nil
+      (:prefix-map ("e" . "edit / eval / export")
+       "e" #'eval-last-sexp
+       "E" #'org-export-dispatch
+       "s" #'org-edit-special
+       )
+      ))
+
+(map! :map org-src-mode-map
+      :localleader
+      "," #'org-edit-src-exit)
+
+;; (define-key org-src-mode-map (kbd ", ,") #'org-edit-src-exit)
 #+END_SRC
 
 * LSP
@@ -268,6 +305,10 @@ I find it rather handy to be asked which buffer I want to see after splitting th
 #+BEGIN_SRC elisp
 
 (print "[config.org] LSP")
+
+(map! :localleader
+      :mode lsp-mode
+      :n "=" #'lsp-format-buffer)
 
 (with-eval-after-load 'lsp-mode
   (print "[config.org] with-eval-after-load lsp-mode")
