--- a/doom/config.org
+++ b/doom/config.org
@@ -12,7 +12,6 @@ Tangle with command 'org-babel-tangle'
 
 ** TODO Update Table of Contents in this file
 ** TODO Autosave on eval
-** TODO How to eval codeblocks?
 ** TODO out-org
 ** TODO highlight occurences
 
@@ -77,7 +76,9 @@ Tangle with command 'org-babel-tangle'
 
 ** Auto-customizations
 
-By default changes made via a customisation interface are added to init.el. I prefer the idea of using a separate file for this. We just need to change a setting, and load it if it exists.
+By default changes made via a customisation interface are added to init.el.
+I prefer the idea of using a separate file for this. We just need to change a
+setting, and load it if it exists.
 
 #+BEGIN_SRC elisp
 
@@ -117,7 +118,7 @@ By default changes made via a customisation interface are added to init.el. I pr
  sentence-end-double-space nil          ; Use a single space after dots
  ;; show-help-function nil                 ; Disable help text everywhere
  tab-always-indent 'complete            ; Tab indents first then tries completions
- tab-width 4                            ; Smaller width for tab characters
+ tab-width 2                            ; Smaller width for tab characters
  uniquify-buffer-name-style 'forward    ; Uniquify buffer names
  ;; warning-minimum-level :error           ; Skip warning buffers
  window-combination-resize t            ; Resize windows proportionally
@@ -141,7 +142,8 @@ By default changes made via a customisation interface are added to init.el. I pr
 
 ** Line Numbers
 
-This determines the style of line numbers in effect. If set to `nil', line numbers are disabled. For relative line numbers, set this to `relative'.
+This determines the style of line numbers in effect. If set to `nil', line
+numbers are disabled. For relative line numbers, set this to `relative'.
 
 #+BEGIN_SRC elisp
 
@@ -240,7 +242,8 @@ available. You can either set `doom-theme' or manually load a theme with the
 
 ** Windows
 
-I find it rather handy to be asked which buffer I want to see after splitting the window.
+I find it rather handy to be asked which buffer I want to see after
+splitting the window.
 
 #+begin_src elisp
 
@@ -279,23 +282,23 @@ I find it rather handy to be asked which buffer I want to see after splitting th
 
 (setq org-directory "~/org/")
 
-(after! org
-  ;; (print "[config.org] (after! org)")
-  (map! :map org-mode-map
+(map! :after org
+      :map org-mode-map
       :localleader
       "e" nil
       (:prefix-map ("e" . "edit / eval / export")
        "e" #'eval-last-sexp
        "E" #'org-export-dispatch
        "s" #'org-edit-special
-       )
-      ))
+       ))
 
-(map! :map org-src-mode-map
+;; none of these works :-(
+(map! :after org
+      :map org-src-mode-map
       :localleader
       "," #'org-edit-src-exit)
+(define-key org-src-mode-map (kbd ", ,") #'org-edit-src-exit)
 
-;; (define-key org-src-mode-map (kbd ", ,") #'org-edit-src-exit)
 #+END_SRC
 
 * LSP
