--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -177,9 +177,12 @@ available. You can either set `doom-theme' or manually load a theme with the
 
 ;; test ->
 
-(setq doom-font (font-spec :family "Fira Code" :size 14)
-      doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
-      ivy-posframe-font (font-spec :family "Fira Code" :size 17))
+(setq doom-font (font-spec :family "Fira Code" :size 28)
+      doom-variable-pitch-font (font-spec :family "Ubuntu" :size 30)
+      ivy-posframe-font (font-spec :family "Fira Code" :size 34))
+;; (setq doom-font (font-spec :family "Fira Code" :size 14)
+;;       doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
+;;       ivy-posframe-font (font-spec :family "Fira Code" :size 17))
 
 #+END_SRC
 
