--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -15,6 +15,8 @@ Tangle with command 'org-babel-tangle'
 ** TODO out-org
 ** TODO highlight occurences
 ** TODO configure conflicts between CIDER and LSP
+** TODO padding/margin
+** TODO save-some-buffers on spc f S
 
 * Table of Contents
 :PROPERTIES:
@@ -346,11 +348,28 @@ splitting the window.
 
 (with-eval-after-load 'lsp-mode
   (print "[config.org] with-eval-after-load lsp-mode")
-  (setq lsp-ui-imenu-enable t
+  (setq ;;
+        lsp-ui-imenu-enable t
+
         lsp-ui-doc-enable t
+        lsp-ui-doc-show-with-cursor t
+        lsp-ui-doc-include-signature t
+        lsp-ui-doc-position 'bottom
+        lsp-ui-doc-delay 2
+
+        lsp-ui-sideline-enable nil
         lsp-ui-sideline-show-code-actions nil
+
         lsp-lens-enable t
-        lsp-enable-symbol-highlighting nil
+
+        lsp-enable-symbol-highlighting t
+        lsp-enable-on-type-formatting t
+        lsp-enable-indentation t
+        lsp-enable-snippet t
+
+        lsp-modeline-diagnostics-enable t
+        lsp-file-watch-threshold 10000
+        lsp-log-io nil
         ;; lsp-enable-file-watchers nil
         ;; +lsp-prompt-to-install-server 'quiet
         )
@@ -379,6 +398,9 @@ splitting the window.
 #+BEGIN_SRC elisp
 
 (print "[config.org] Clojure")
+
+(setq clojure-ident-style 'align-arguments)
+(setq clojure-align-forms-automatically 't)
 
 (after! clojure-mode
   (modify-syntax-entry ?- "w" clojure-mode-syntax-table))
