--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -7,6 +7,7 @@ Documentation: https://github.com/hlissner/doom-emacs/blob/develop/modules/confi
 Inspired by https://raw.githubusercontent.com/daviwil/dotfiles/master/Emacs.org
 Examples:
 - https://github.com/hlissner/doom-emacs-private/blob/master/config.el
+- https://tecosaur.github.io/emacs-config/config.html
 
 Tangle with command 'org-babel-tangle'
 
@@ -14,7 +15,6 @@ Tangle with command 'org-babel-tangle'
 ** TODO Autosave on eval
 ** TODO out-org
 ** TODO padding/margin
-** TODO save-some-buffers on spc f S
 
 * Table of Contents
 :PROPERTIES:
@@ -124,7 +124,15 @@ setting, and load it if it exists.
  ;; warning-minimum-level :error           ; Skip warning buffers
  window-combination-resize t            ; Resize windows proportionally
  x-stretch-cursor t                    ; Stretch cursor to the glyph width
+ )
 
+(setq
+ undo-limit 80000000  ; Raise undo-limit to 80Mb
+ evil-want-fine-undo t ; By default while in insert all changes are one big blob. Be more granular
+      auto-save-default t ; Nobody likes to loose work, I certainly don't
+      truncate-string-ellipsis "…" ; Unicode ellispis are nicer than "...", and also save /precious/ space
+      password-cache-expiry nil ; I can trust my computers ... can't I?
+      ;; scroll-preserve-screen-position 'always     ; Don't have `point' jump around
  )
 
 ;; (blink-cursor-mode 0)                   ; Prefer a still cursor
@@ -182,14 +190,20 @@ available. You can either set `doom-theme' or manually load a theme with the
 (cond
 
  ((> (x-display-pixel-height) 1600)
-  (setq doom-font (font-spec :family "Fira Code" :size 28)
-        doom-variable-pitch-font (font-spec :family "Ubuntu" :size 30)
-        ivy-posframe-font (font-spec :family "Fira Code" :size 34)))
+  (setq
+   doom-font (font-spec :family "Fira Code" :size 28 :weight 'light)
+   doom-big-font (font-spec :family "JetBrains Mono" :size 36)
+   doom-variable-pitch-font (font-spec :family "Ubuntu" :size 30)
+   doom-serif-font (font-spec :family "IBM Plex Mono" :weight 'light)
+   ))
 
  (t
-  (setq doom-font (font-spec :family "Fira Code" :size 14)
-          doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
-          ivy-posframe-font (font-spec :family "Fira Code" :size 17))))
+  (setq
+   doom-font (font-spec :family "Fira Code" :size 14 :weight 'light)
+   doom-big-font (font-spec :family "JetBrains Mono" :size 18)
+   doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
+   doom-serif-font (font-spec :family "IBM Plex Mono" :weight 'light)
+   )))
 #+END_SRC
 
 ** Exit without Confirmation
@@ -200,9 +214,43 @@ available. You can either set `doom-theme' or manually load a theme with the
 
 #+END_SRC
 
+** Layout
+
+From https://github.com/rougier/nano-emacs/blob/master/nano-layout.el
+
+#+BEGIN_SRC elisp
+
+;; (setq default-frame-alist
+;;       (append (list
+;; 	           '(min-height . 1)
+;;                '(height     . 45)
+;; 	           '(min-width  . 1)
+;;                '(width      . 81)
+;;                '(vertical-scroll-bars . nil)
+;;                '(internal-border-width . 24)
+;;                '(left-fringe    . 1)
+;;                '(right-fringe   . 1)
+;;                '(tool-bar-lines . 0)
+;;                '(menu-bar-lines . 0))))
+
+
+;; Vertical window divider
+;; (setq window-divider-default-right-width 24)
+;; (setq window-divider-default-places 'right-only)
+;; (window-divider-mode 1)
+
+#+END_SRC
+
+
 ** Parens
 
 #+BEGIN_SRC elisp
+
+(use-package! smartparens
+  :config
+  (setq sp-autoskip-closing-pair nil) ; does not work :-(
+  )
+
 
 (add-hook 'smartparens-enabled-hook #'smartparens-strict-mode)
 (add-hook 'smartparens-enabled-hook #'evil-smartparens-mode)
@@ -216,6 +264,8 @@ available. You can either set `doom-theme' or manually load a theme with the
       :n "M-h" #'evil-cp-<)
 
 #+END_SRC
+
+#+RESULTS:
 
 ** Keyboard Bindings
 
