--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -128,11 +128,11 @@ setting, and load it if it exists.
 
 (setq
  undo-limit 80000000  ; Raise undo-limit to 80Mb
- evil-want-fine-undo t ; By default while in insert all changes are one big blob. Be more granular
-      auto-save-default t ; Nobody likes to loose work, I certainly don't
-      truncate-string-ellipsis "…" ; Unicode ellispis are nicer than "...", and also save /precious/ space
-      password-cache-expiry nil ; I can trust my computers ... can't I?
-      ;; scroll-preserve-screen-position 'always     ; Don't have `point' jump around
+ ;; evil-want-fine-undo t ; By default while in insert all changes are one big blob. Be more granular
+ auto-save-default t ; Nobody likes to loose work, I certainly don't
+ truncate-string-ellipsis "…" ; Unicode ellispis are nicer than "...", and also save /precious/ space
+ password-cache-expiry nil ; I can trust my computers ... can't I?
+ ;; scroll-preserve-screen-position 'always     ; Don't have `point' jump around
  )
 
 ;; (blink-cursor-mode 0)                   ; Prefer a still cursor
@@ -177,9 +177,13 @@ There are two ways to load a theme. Both assume the theme is installed and
 available. You can either set `doom-theme' or manually load a theme with the
 `load-theme' function. This is the default:
 
+Ligatures Test: ->
+
 #+BEGIN_SRC elisp
 
 (setq doom-theme 'doom-one)
+;; (setq doom-theme 'modus-operandi)
+;; (setq doom-theme 'modus-vivendi)
 ;; (setq doom-theme 'doom-one-light)
 ;; (setq doom-theme 'doom-vibrant)
 ;; (setq doom-theme 'doom-gruvbox)
@@ -187,10 +191,13 @@ available. You can either set `doom-theme' or manually load a theme with the
 
 (print (> (x-display-pixel-height) 1600))
 
+;; TEST:// (-> what?)
+
 (cond
 
  ((> (x-display-pixel-height) 1600)
   (setq
+
    doom-font (font-spec :family "Fira Code" :size 28 :weight 'light)
    doom-big-font (font-spec :family "JetBrains Mono" :size 36)
    doom-variable-pitch-font (font-spec :family "Ubuntu" :size 30)
@@ -241,6 +248,13 @@ From https://github.com/rougier/nano-emacs/blob/master/nano-layout.el
 
 #+END_SRC
 
+** Which-key
+
+#+BEGIN_SRC elisp
+
+(setq which-key-idle-delay 0.5)
+
+#+END_SRC
 
 ** Parens
 
@@ -296,6 +310,7 @@ From https://github.com/rougier/nano-emacs/blob/master/nano-layout.el
       :n "C-l" #'evil-next-buffer
       :n "C-j" #'evil-jump-forward
       :n "C-k" #'evil-jump-backward
+      :n "ö" #'evil-avy-goto-char-timer
       )
 
 #+END_SRC
@@ -337,6 +352,15 @@ splitting the window.
 
 #+end_src
 
+* Evil
+** easy-motion
+
+#+begin_src elisp
+
+(use-package! evil-easymotion
+  )
+
+#+end_src
 * Projectile
 
 #+begin_src elisp
@@ -470,6 +494,9 @@ splitting the window.
    )
   (modify-syntax-entry ?- "w" clojure-mode-syntax-table)
   )
+
+;; (after! clojure-mode ; in this case the major mode and package named the same thing
+;;   (set-ligatures! 'clojure-mode))
 
 (use-package! cider
   :config
