--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -500,6 +500,8 @@ splitting the window.
 
 (use-package! cider
   :config
+  (setq
+   cider-font-lock-reader-conditionals nil)
   (map! :localleader
         :map (clojure-mode-map clojurescript-mode-map)
         "ev" #'cider-eval-sexp-at-point
