--- a/stows/doom/.config/doom/config.org
+++ b/stows/doom/.config/doom/config.org
@@ -353,6 +353,15 @@ splitting the window.
 #+end_src
 
 * Evil
+** misc
+
+#+begin_src elisp
+
+(setq evil-move-cursor-back nil)
+(setq +evil-want-o/O-to-continue-comments nil)
+
+#+end_src
+
 ** easy-motion
 
 #+begin_src elisp
@@ -369,10 +378,8 @@ splitting the window.
                                                 projectile-root-top-down
                                                 projectile-root-top-down-recurring
                                                 projectile-root-bottom-up))
-;; (setq projectile-project-root-files-functions '(projectile-root-local
-;;                                                 projectile-root-top-down
-;;                                                 projectile-root-top-down-recurring
-;;                                                 projectile-root-bottom-up))
+
+(setq projectile-sort-order 'recently-active)
 
 #+end_src
 
@@ -500,8 +507,8 @@ splitting the window.
 
 (use-package! cider
   :config
-  (setq
-   cider-font-lock-reader-conditionals nil)
+  (setq cider-font-lock-reader-conditionals nil)
+  (setq cider-auto-inspect-after-eval t)
   (map! :localleader
         :map (clojure-mode-map clojurescript-mode-map)
         "ev" #'cider-eval-sexp-at-point
