--- a/emacs-config.org
+++ b/emacs-config.org
@@ -102,7 +102,8 @@ https://www.emacswiki.org/emacs/FullScreen
 ;;; init.el --- Tangeled from emacs-config.org  -*- lexical-binding: t; -*-
 #+end_src
 
-** Elpaca
+** Emacs behavior
+*** Elpaca
 
 https://github.com/progfolio/elpaca/blob/master/doc/manual.md
 
@@ -156,13 +157,13 @@ https://github.com/progfolio/elpaca/blob/master/doc/manual.md
     (elpaca-use-package-mode))
 #+end_src
 
-** Disable Emacs Custom Infrastructure
+*** Disable Emacs Custom Infrastructure
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
 (setq custom-file (make-temp-file "emacs-custom-"))
 #+end_src
 
-** Disable backups and lockfiles
+*** Disable backups and lockfiles
 
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
@@ -171,7 +172,7 @@ https://github.com/progfolio/elpaca/blob/master/doc/manual.md
 (setq create-lockfiles nil)
 #+end_src
 
-** Silence native compilation
+*** Silence native compilation
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
 (when (native-comp-available-p)
@@ -179,30 +180,7 @@ https://github.com/progfolio/elpaca/blob/master/doc/manual.md
   (setq native-compile-prune-cache t))
 #+end_src
 
-** comment macro
-
-#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
-(defmacro comment (&rest body)
-  "Determine what to do with BODY.
-
-If BODY contains an unquoted plist of the form (:eval t) then
-return BODY inside a `progn'.
-
-Otherwise, do nothing with BODY and return nil, with no side
-effects."
-  (declare (indent defun))
-  (let ((eval))
-    (dolist (element body)
-      (when-let* (((plistp element))
-                  (key (car element))
-                  ((eq key :eval))
-                  (val (cadr element)))
-        (setq eval val
-              body (delq element body))))
-    (when eval `(progn ,@body))))
-#+end_src
-
-** Basic configurations
+*** Miscellaneous settings
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
   (use-package emacs
@@ -432,29 +410,207 @@ effects."
 
 #+end_src
 
-
-** recentf
+** My Helper functions and macros
+*** my/set-custom-key
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
-  (use-package recentf
-    :ensure nil
-    :hook (after-init . recentf-mode)
-
-    :config
-    (setq recentf-max-saved-items 100)
-    (setq recentf-max-menu-items 25)
-    (setq recentf-save-file-modes nil)
-    (setq recentf-keep nil)
-    (setq recentf-auto-cleanup nil)
-    (setq recentf-initialize-file-name-history nil)
-    (setq recentf-filename-handlers nil)
-    (setq recentf-show-file-shortcuts-flag nil)
-    (recentf-mode 1)
-    )
+(defun my/set-custom-key (kbd-string command-symbol)
+  (global-set-key (kbd (concat "C-c " kbd-string)) command-symbol))
 #+end_src
 
-** TODO Theme
-** meow
+*** comment macro
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(defmacro comment (&rest body)
+  "Determine what to do with BODY.
+
+If BODY contains an unquoted plist of the form (:eval t) then
+return BODY inside a `progn'.
+
+Otherwise, do nothing with BODY and return nil, with no side
+effects."
+  (declare (indent defun))
+  (let ((eval))
+    (dolist (element body)
+      (when-let* (((plistp element))
+                  (key (car element))
+                  ((eq key :eval))
+                  (val (cadr element)))
+        (setq eval val
+              body (delq element body))))
+    (when eval `(progn ,@body))))
+#+end_src
+
+** Theme
+*** default font
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(add-to-list 'default-frame-alist '(font . "JetBrains Mono-12"))
+#+end_src
+
+*** ef-themes
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(use-package ef-themes
+  :ensure t
+
+  :config
+  (setq ef-themes-to-toggle '(ef-eagle ef-owl))
+  (setq ef-themes-headings
+        '((0 variable-pitch light 1.9)
+          ;; (1 variable-pitch light 1.8)
+          ;; (2 variable-pitch regular 1.7)
+          ;; (3 variable-pitch regular 1.6)
+          ;; (4 variable-pitch regular 1.5)
+          ;; (5 variable-pitch 1.4)
+          ;; (6 variable-pitch 1.3)
+          ;; (7 variable-pitch 1.2)
+          ;; (t variable-pitch 1.1)
+          ))
+  (setq ef-themes-mixed-fonts t
+        ef-themes-variable-pitch-ui t)
+  (setq ef-themes-region '(intense no-extend neutral))
+  (mapc #'disable-theme custom-enabled-themes)
+
+  (ef-themes-select 'ef-owl)
+
+  )
+#+end_src
+
+*** spacious-padding
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(use-package spacious-padding
+  :ensure t
+  :config
+  (setq spacious-padding-widths
+        '( :internal-border-width 15
+           :header-line-width 4
+           :mode-line-width 6
+           :tab-width 4
+           :right-divider-width 30
+           :scroll-bar-width 8
+           :fringe-width 8))
+  (spacious-padding-mode 1)
+  )
+#+end_src
+
+*** pulsar
+
+https://protesilaos.com/emacs/pulsar#h:96289426-8480-4ea6-9053-280348adc0ed
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(use-package pulsar
+  :ensure t
+
+  :config
+  (setq pulsar-pulse t)
+  (setq pulsar-delay 0.10)
+  (setq pulsar-iterations 10)
+  (setq pulsar-face 'pulsar-cyan)
+  (setq pulsar-highlight-face 'pulsar-yellow)
+  
+  (setq pulsar-resolve-pulse-function-aliases t)
+
+  (add-to-list 'pulsar-pulse-functions 'meow-search)
+  (add-to-list 'pulsar-pulse-functions 'phi-search)
+  (add-to-list 'pulsar-pulse-functions 'phi-search-backward)
+  (add-to-list 'pulsar-pulse-functions 'beginning-of-defun)
+  (add-to-list 'pulsar-pulse-functions 'end-of-defun)
+
+  (add-to-list 'pulsar-pulse-region-functions 'yank)
+  (add-to-list 'pulsar-pulse-region-functions 'consult-yank-pop)  
+  
+  (pulsar-global-mode 1)
+  (add-hook 'minibuffer-setup-hook #'pulsar-pulse-line)
+
+  ;; integration with the `consult' package:
+  (add-hook 'consult-after-jump-hook #'pulsar-recenter-top)
+  (add-hook 'consult-after-jump-hook #'pulsar-reveal-entry)
+
+  )
+#+end_src
+
+*** ligature
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(use-package ligature
+  :ensure t
+  :load-path "path-to-ligature-repo"
+  
+  :config
+  ;; Enable the "www" ligature in every possible major mode
+  (ligature-set-ligatures 't '("www"))
+  ;; Enable traditional ligature support in eww-mode, if the
+  ;; `variable-pitch' face supports it
+  (ligature-set-ligatures 'eww-mode '("ff" "fi" "ffi"))
+  ;; Enable all Cascadia and Fira Code ligatures in programming modes
+  (ligature-set-ligatures 'prog-mode
+                          '(;; == === ==== => =| =>>=>=|=>==>> ==< =/=//=// =~
+                            ;; =:= =!=
+                            ("=" (rx (+ (or ">" "<" "|" "/" "~" ":" "!" "="))))
+                            ;; ;; ;;;
+                            (";" (rx (+ ";")))
+                            ;; && &&&
+                            ("&" (rx (+ "&")))
+                            ;; !! !!! !. !: !!. != !== !~
+                            ("!" (rx (+ (or "=" "!" "\." ":" "~"))))
+                            ;; ?? ??? ?:  ?=  ?.
+                            ("?" (rx (or ":" "=" "\." (+ "?"))))
+                            ;; %% %%%
+                            ("%" (rx (+ "%")))
+                            ;; |> ||> |||> ||||> |] |} || ||| |-> ||-||
+                            ;; |->>-||-<<-| |- |== ||=||
+                            ;; |==>>==<<==<=>==//==/=!==:===>
+                            ("|" (rx (+ (or ">" "<" "|" "/" ":" "!" "}" "\]"
+                                            "-" "=" ))))
+                            ;; \\ \\\ \/
+                            ("\\" (rx (or "/" (+ "\\"))))
+                            ;; ++ +++ ++++ +>
+                            ("+" (rx (or ">" (+ "+"))))
+                            ;; :: ::: :::: :> :< := :// ::=
+                            ;; (":" (rx (or ">" "<" "=" "//" ":=" (+ ":"))))
+                            ;; // /// //// /\ /* /> /===:===!=//===>>==>==/
+                            ("/" (rx (+ (or ">"  "<" "|" "/" "\\" "\*" ":" "!"
+                                            "="))))
+                            ;; .. ... .... .= .- .? ..= ..<
+                            ("\." (rx (or "=" "-" "\?" "\.=" "\.<" (+ "\."))))
+                            ;; -- --- ---- -~ -> ->> -| -|->-->>->--<<-|
+                            ("-" (rx (+ (or ">" "<" "|" "~" "-"))))
+                            ;; *> */ *)  ** *** ****
+                            ("*" (rx (or ">" "/" ")" (+ "*"))))
+                            ;; www wwww
+                            ("w" (rx (+ "w")))
+                            ;; <> <!-- <|> <: <~ <~> <~~ <+ <* <$ </  <+> <*>
+                            ;; <$> </> <|  <||  <||| <|||| <- <-| <-<<-|-> <->>
+                            ;; <<-> <= <=> <<==<<==>=|=>==/==//=!==:=>
+                            ;; << <<< <<<<
+                            ("<" (rx (+ (or "\+" "\*" "\$" "<" ">" ":" "~"  "!"
+                                            "-"  "/" "|" "="))))
+                            ;; >: >- >>- >--|-> >>-|-> >= >== >>== >=|=:=>>
+                            ;; >> >>> >>>>
+                            (">" (rx (+ (or ">" "<" "|" "/" ":" "=" "-"))))
+                            ;; #: #= #! #( #? #[ #{ #_ #_( ## ### #####
+                            ;; ("#" (rx (or ":" "=" "!" "(" "\?" "\[" "{" "_(" "_"
+                            ;; (+ "#"))))
+                            ;; ~~ ~~~ ~=  ~-  ~@ ~> ~~>
+                            ("~" (rx (or ">" "=" "-" "@" "~>" (+ "~"))))
+                            ;; __ ___ ____ _|_ __|____|_
+                            ("_" (rx (+ (or "_" "|"))))
+                            ;; Fira code: 0xFF 0x12
+                            ("0" (rx (and "x" (+ (in "A-F" "a-f" "0-9")))))
+                            ;; Fira code:
+                            ;; "Fl"  "Tl"  "fi"  "fj"  "fl"  "ft"
+                            ;; The few not covered by the regexps.
+                            ;; "{|"  "[|"  "]#"  "(*"  "}#"  "$>"  "^="
+                            ))
+  ;; Enables ligature checks globally in all buffers. You can also do it
+  ;; per mode with `ligature-mode'.
+  (global-ligature-mode t))
+#+end_src
+
+** Keys
+*** meow
 
 https://github.com/meow-edit/meow
 
@@ -665,23 +821,59 @@ https://github.com/meow-edit/meow
       (add-hook 'meow-insert-exit-hook 'corfu-quit))
 
     )
-
+ 
 #+end_src
-
 
 ** Miscellaneous
+*** recentf
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+  (use-package recentf
+    :ensure nil
+    :hook (after-init . recentf-mode)
 
+    :config
+    (setq recentf-max-saved-items 100)
+    (setq recentf-max-menu-items 25)
+    (setq recentf-save-file-modes nil)
+    (setq recentf-keep nil)
+    (setq recentf-auto-cleanup nil)
+    (setq recentf-initialize-file-name-history nil)
+    (setq recentf-filename-handlers nil)
+    (setq recentf-show-file-shortcuts-flag nil)
+    (recentf-mode 1)
+    )
 #+end_src
 
+*** outline
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+  (use-package outline
+    
+    :config
+
+    (my/set-custom-key "o t" 'outline-toggle-children)
+    (my/set-custom-key "o f" 'outline-hide-other)
+    (my/set-custom-key "o a" 'outline-show-all)
+
+    (add-hook 'emacs-lisp-mode-hook #'outline-minor-mode)
+    (add-hook 'clojure-mode-hook #'outline-minor-mode)
+    )
+#+end_src
+
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(use-package outline-minor-faces
+  :ensure t
+  :after outline
+
+  :config
+  (add-hook 'outline-minor-mode-hook
+            #'outline-minor-faces-mode))
+#+end_src
 ** Legacy config
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
-(defun my/set-custom-key (kbd-string command-symbol)
-  (global-set-key (kbd (concat "C-c " kbd-string)) command-symbol))
-
-
 (defvar witek-context-key-map (make-sparse-keymap) "My Context Keymap")
 (defalias 'witek-context-key-map witek-context-key-map)
 
@@ -700,8 +892,6 @@ https://github.com/meow-edit/meow
     (add-to-list 'load-path custom-modules)))
 
 (require 'my-commands)
-(require 'my-meow)
-(require 'my-theme)
 (require 'my-keys)
 (require 'my-basics)
 (require 'my-extras)
