--- a/emacs-config.org
+++ b/emacs-config.org
@@ -416,6 +416,21 @@ https://github.com/progfolio/elpaca/blob/master/doc/manual.md
 #+end_src
 
 ** My Helper functions and macros
+*** =witek-context-key-map=
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+(defvar witek-context-key-map (make-sparse-keymap) "My Context Keymap")
+(defalias 'witek-context-key-map witek-context-key-map)
+
+(defun my/set-context-key (kbd-string command-symbol)
+  (define-key witek-context-key-map (kbd kbd-string) command-symbol))
+
+(defun my/activate-context-key-map ()
+  "Set `witek-context-key-map' as the current transient map. Also show which-key."
+  (interactive)
+  (set-transient-map witek-context-key-map))
+#+end_src
+
 *** my/set-custom-key
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
@@ -455,6 +470,30 @@ effects."
         (call-interactively 'sp-delete-region)
       (sp-backward-delete-char))
     )
+#+end_src
+
+*** wrap-round wrap-square wrap-curly
+
+#+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
+    
+  (defun my/wrap-round ()
+    (interactive)
+    (sp-wrap-round)
+    (insert " ")
+    (backward-char)
+    (meow-insert))
+  (define-key witek-context-key-map (kbd "(") 'my/wrap-round)
+
+  (defun my/wrap-square ()
+    (interactive)
+    (sp-wrap-square))
+  (define-key witek-context-key-map (kbd "[") 'my/wrap-square)
+
+  (defun my/wrap-curly ()
+    (interactive)
+    (sp-wrap-curly))
+  (define-key witek-context-key-map (kbd "{") 'my/wrap-curly)
+
 #+end_src
 
 ** Theme
@@ -945,16 +984,6 @@ https://github.com/meow-edit/meow
 ** Legacy config
 
 #+begin_src emacs-lisp :tangle "stows/emacs/.config/emacs/init.el"
-(defvar witek-context-key-map (make-sparse-keymap) "My Context Keymap")
-(defalias 'witek-context-key-map witek-context-key-map)
-
-(defun my/set-context-key (kbd-string command-symbol)
-  (define-key witek-context-key-map (kbd kbd-string) command-symbol))
-
-(defun my/activate-context-key-map ()
-  "Set `witek-context-key-map' as the current transient map. Also show which-key."
-  (interactive)
-  (set-transient-map witek-context-key-map))
 
 
 (let ((custom-modules (expand-file-name "custom-modules" user-emacs-directory)))
